# WirelessAgent-R2

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.purple  README.md  docker-compose.yml  pyproject.toml  requirements.txt  results_analysis.py  run.py
.github/workflows/: publish-purple.yml  test-and-publish.yml
agents/: __init__.py  green_agent.py  purple_agent.py
benchmarks/: benchmark.py  utils.py  wchw.py  wchw_enhanced.py
config/: agentbeats.json  assessment.yaml
data/: download_data.py
data/datasets/: wchw_test_70.jsonl
docs/: DEMO_SCRIPT.md
scripts/: __init__.py  answer_format_classifier.py  async_llm.py  base_operator.py  enhanced_tools.py  evaluator.py  formatter.py  interface.py  logs.py  operator_an.py  operators.py  optimizer.py  run_benchmark.sh  run_green_agent.sh  run_purple_agent.sh  tools.py  wireless_tools.py  workflow.py
scripts/optimizer_utils/: __init__.py  convergence_utils.py  critic_utils.py  data_utils.py  evaluation_utils.py  experience_utils.py  graph_utils.py
scripts/prompts/: optimize_prompt.py  optimize_prompt_backup.py  prompt.py
scripts/rag/: __init__.py  retriever.py
scripts/telecom_tools/: __init__.py  rag_tool.py  telecom_calculator.py
scripts/utils/: code.py  common.py  lcb_runner.py  sanitize.py
src/: __init__.py  agent.py  executor.py  messenger.py  server.py
tests/: __init__.py  test_agent.py
workspace/WCHW/: __init__.py
workspace/WCHW/workflows/: processed_experience.json  results.json
workspace/WCHW/workflows/round_1/: 0.51660_20260111_123739.csv  0.52636_20260110_142707.csv  0.52857_20260109_141855.csv  0.52959_20260110_153219.csv  0.54337_20260110_145205.csv  0.55476_20260110_185245.csv  0.60619_20260107_211934.csv  0.60878_20260109_090036.csv  0.61297_20260108_100940.csv  0.61317_20260108_160627.csv  0.61437_20260108_194245.csv  0.61577_20260108_203615.csv  0.62156_20260108_135126.csv  0.62236_20260108_164525.csv  0.62443_20260112_090543.csv  graph.py  (+13 more)
workspace/WCHW/workflows_test/: results.json
(+103 files in other folders)
