[project]
name = "wirelessagent"
version = "1.0.0"
description = "WirelessAgent - Green Agent for WCHW Benchmark (UC Berkeley AgentX Competition)"
authors = [
    {name = "Jingwen Tong", email = "jwentong@foxmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "agent", "wireless-communication", "benchmark", "a2a", "agentbeats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jwentong/WirelessAgent-R2"
Repository = "https://github.com/jwentong/WirelessAgent-R2"
Issues = "https://github.com/jwentong/WirelessAgent-R2/issues"

[project.scripts]
wirelessagent = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
